Fixed Output Name

--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -5,7 +5,8 @@ process RPCSegmentEff = {
 	source = PoolSource { 
    
 	untracked vstring fileNames = {
-		"file:/tmp/carrillo/rechit4D_98.root"
+#		"file:/tmp/carrillo/rechit4D_98.root"
+		"file:/tmp/carrillo/withDTSegments.CA369ED0-371A-DD11-A644-0030487A1FEC.root"
 		}
 	} 
 
@@ -18,10 +19,10 @@ process RPCSegmentEff = {
 		untracked bool incldtMB4 = 1
 		untracked bool incldt = 1
 
-		untracked double widestrip = 4
+		untracked double widestrip = 2
 		untracked double widestripRB4 = 4
 		untracked double MinCosAng = 0.99
-		untracked double MaxD = 100.
+		untracked double MaxD = 30.
 
 		untracked string muonRPCDigis = "muonRPCDigis"
 		untracked string cscSegments = "cscSegments"
@@ -32,7 +33,7 @@ process RPCSegmentEff = {
                
 		untracked bool   EffSaveRootFile  = true
 		untracked int32  EffSaveRootFileEventsInterval  = 100
-		untracked string EffRootFileName  = "MuonSegEff_RPCGlobal.003.root"
+		untracked string EffRootFileName  = "MuonSegEff.root"
 
 	}
 
@@ -43,16 +44,10 @@ process RPCSegmentEff = {
 	include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
 	include "DQMServices/Core/data/DQM.cfg"	
 
-	#service = ModuleWebRegistry{ }
-	#service = DaqMonitorROOTBackEnd{}
-	#service = LockService{untracked vstring labels = {"source"}}
-	#service = MonitorDaemon {
-	#       untracked   bool AutoInstantiate    = false
-	#       untracked  int32 reconnect_delay    = 5
-	#       untracked string DestinationAddress = "cmsdaquser0.cern.ch"
-	#       untracked  int32 SendPort           = 9090
-	#       untracked string NameAsSource       = "GlobalDQM"
-	#}
+	replace DQM.collectorHost = "myhost"
+        replace DQM.collectorPort = 9090
+        replace DQM.debug = false
+
 
 
 
