Average Strip Implemented

--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -5,8 +5,8 @@ process RPCSegmentEff = {
 	source = PoolSource { 
    
 	untracked vstring fileNames = {
-#		"file:/tmp/carrillo/rechit4D_98.root"
-		"file:/tmp/carrillo/withDTSegments.CA369ED0-371A-DD11-A644-0030487A1FEC.root"
+		"rfio:/castor/cern.ch/user/a/aocampor/camilo/DTsegments/rechit4D_81.root"
+#		"file:/tmp/carrillo/witDTandCSCSegments.5A1C2D60-9820-DD11-989B-001D09F27003.root"
 		}
 	} 
 
@@ -16,10 +16,10 @@ process RPCSegmentEff = {
 	module museg = MuonSegmentEff { 
 
 		untracked bool inclcsc = 0
-		untracked bool incldtMB4 = 1
+		untracked bool incldtMB4 = 0
 		untracked bool incldt = 1
 
-		untracked double widestrip = 2
+		untracked double MinimalResidual = 5.
 		untracked double widestripRB4 = 4
 		untracked double MinCosAng = 0.99
 		untracked double MaxD = 30.
@@ -30,8 +30,11 @@ process RPCSegmentEff = {
 
 		untracked string rejected = "rejected.txt"
 		untracked string rollseff = "rollseff.txt"
+		untracked string GlobalRootFileName = "GlobalRootFile.root"
+		untracked int32 wheel = 0
+		
                
-		untracked bool   EffSaveRootFile  = true
+		untracked bool   EffSaveRootFile  = false
 		untracked int32  EffSaveRootFileEventsInterval  = 100
 		untracked string EffRootFileName  = "MuonSegEff.root"
 
@@ -42,10 +45,10 @@ process RPCSegmentEff = {
 	include "Geometry/CSCGeometry/data/cscGeometry.cfi"
 	include "Geometry/DTGeometry/data/dtGeometry.cfi"
 	include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
-	include "DQMServices/Core/data/DQM.cfg"	
 
+	include "DQMServices/Core/data/DQM.cfg"	
 	replace DQM.collectorHost = "myhost"
-        replace DQM.collectorPort = 9090
+	replace DQM.collectorPort = 9090
         replace DQM.debug = false
 
 
