--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -1,39 +1,44 @@
 process RPCSegmentEff = {
 
-     	untracked PSet maxEvents = {untracked int32 input = -1}
+     	untracked PSet maxEvents = {untracked int32 input = 10000}
   
 	source = PoolSource { 
    
 	untracked vstring fileNames = {
-		"rfio:/castor/cern.ch/user/a/aocampor/camilo/DTsegments/rechit4D_81.root"
-#		"file:/tmp/carrillo/witDTandCSCSegments.5A1C2D60-9820-DD11-989B-001D09F27003.root"
+#		"rfio:/castor/cern.ch/user/a/aocampor/camilo/DTsegments/rechit4D_81.root"
+#		"file:/tmp/carrillo/witDTandCSCSegments.50FB6DEB-A120-DD11-AD22-000423D98920.root"
+		"file:/tmp/carrillo/rechit4D_81.root"
+#		"file:/tmp/carrillo/rechit4D_83.root"
+#		"file:/tmp/carrillo/rechit4D_85.root",
+#		"file:/tmp/carrillo/rechit4D_87.root"
 		}
 	} 
-
 	#keep the logging output to a nice level
 	service = MessageLogger {}
 
 	module museg = MuonSegmentEff { 
 
+		untracked bool incldt = 0
+		untracked bool incldtMB4 = 1
 		untracked bool inclcsc = 0
-		untracked bool incldtMB4 = 0
-		untracked bool incldt = 1
+		
 
-		untracked double MinimalResidual = 5.
-		untracked double widestripRB4 = 4
+		untracked double MinimalResidual = 4.5
+		untracked double MinimalResidualRB4 = 10.0
 		untracked double MinCosAng = 0.99
-		untracked double MaxD = 30.
+		untracked double MaxD = 80.
+		untracked double MaxDrb4 = 150.
+		untracked double MaxResStripToCountInAverage = 5.
+		untracked double MaxResStripToCountInAverageRB4 = 7.
 
 		untracked string muonRPCDigis = "muonRPCDigis"
 		untracked string cscSegments = "cscSegments"
 		untracked string dt4DSegments = "dt4DSegments"
 
-		untracked string rejected = "rejected.txt"
-		untracked string rollseff = "rollseff.txt"
-		untracked string GlobalRootFileName = "GlobalRootFile.root"
-		untracked int32 wheel = 0
-		
-               
+		untracked string rejected = "rejected4.txt"
+		untracked string rollseff = "rollseff4.txt"
+		untracked string GlobalRootFileName = "GlobalRootFile4.root"
+
 		untracked bool   EffSaveRootFile  = false
 		untracked int32  EffSaveRootFileEventsInterval  = 100
 		untracked string EffRootFileName  = "MuonSegEff.root"
@@ -47,7 +52,7 @@ process RPCSegmentEff = {
 	include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
 
 	include "DQMServices/Core/data/DQM.cfg"	
-	replace DQM.collectorHost = "myhost"
+	replace DQM.collectorHost = ""
 	replace DQM.collectorPort = 9090
         replace DQM.debug = false
 
