--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -18,11 +18,12 @@ process RPCSegmentEff = {
 
 	module museg = MuonSegmentEff { 
 
-		untracked bool incldt = 0
+		untracked bool incldt = 1
 		untracked bool incldtMB4 = 1
 		untracked bool inclcsc = 0
-		
 
+		untracked bool prodImages = 1
+			
 		untracked double MinimalResidual = 4.5
 		untracked double MinimalResidualRB4 = 10.0
 		untracked double MinCosAng = 0.99
@@ -35,9 +36,9 @@ process RPCSegmentEff = {
 		untracked string cscSegments = "cscSegments"
 		untracked string dt4DSegments = "dt4DSegments"
 
-		untracked string rejected = "rejected4.txt"
-		untracked string rollseff = "rollseff4.txt"
-		untracked string GlobalRootFileName = "GlobalRootFile4.root"
+		untracked string rejected = "rejected.txt"
+		untracked string rollseff = "rollseff.txt"
+		untracked string GlobalRootFileName = "GlobalRootFile.root"
 
 		untracked bool   EffSaveRootFile  = false
 		untracked int32  EffSaveRootFileEventsInterval  = 100
