--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -5,9 +5,11 @@ process RPCSegmentEff = {
 	source = PoolSource { 
    
 	untracked vstring fileNames = {
+		'rfio:/castor/cern.ch/cms//store/data/2008/5/20/T0ReReco-GlobalCruzet1-A-v1/0006/FEACFB38-E826-DD11-8509-000423D985E4.root'
+
 #		"rfio:/castor/cern.ch/user/a/aocampor/camilo/DTsegments/rechit4D_81.root"
 #		"file:/tmp/carrillo/witDTandCSCSegments.50FB6DEB-A120-DD11-AD22-000423D98920.root"
-		"file:/tmp/carrillo/rechit4D_81.root"
+#		"file:/tmp/carrillo/rechit4D_81.root"
 #		"file:/tmp/carrillo/rechit4D_83.root"
 #		"file:/tmp/carrillo/rechit4D_85.root",
 #		"file:/tmp/carrillo/rechit4D_87.root"
@@ -22,7 +24,7 @@ process RPCSegmentEff = {
 		untracked bool incldtMB4 = 1
 		untracked bool inclcsc = 0
 
-		untracked bool prodImages = 1
+		untracked bool prodImages = 0
 			
 		untracked double MinimalResidual = 4.5
 		untracked double MinimalResidualRB4 = 10.0
@@ -40,7 +42,7 @@ process RPCSegmentEff = {
 		untracked string rollseff = "rollseff.txt"
 		untracked string GlobalRootFileName = "GlobalRootFile.root"
 
-		untracked bool   EffSaveRootFile  = false
+		untracked bool   EffSaveRootFile  = true
 		untracked int32  EffSaveRootFileEventsInterval  = 100
 		untracked string EffRootFileName  = "MuonSegEff.root"
 
