Implemented bool for Calculate Effciency

--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -6,7 +6,6 @@ process RPCSegmentEff = {
    
 	untracked vstring fileNames = {
 		'rfio:/castor/cern.ch/cms//store/data/2008/5/20/T0ReReco-GlobalCruzet1-A-v1/0006/FEACFB38-E826-DD11-8509-000423D985E4.root'
-
 #		"rfio:/castor/cern.ch/user/a/aocampor/camilo/DTsegments/rechit4D_81.root"
 #		"file:/tmp/carrillo/witDTandCSCSegments.50FB6DEB-A120-DD11-AD22-000423D98920.root"
 #		"file:/tmp/carrillo/rechit4D_81.root"
@@ -24,7 +23,8 @@ process RPCSegmentEff = {
 		untracked bool incldtMB4 = 1
 		untracked bool inclcsc = 0
 
-		untracked bool prodImages = 0
+		untracked bool prodImages = 1
+		untracked bool calculateEfficiency = false
 			
 		untracked double MinimalResidual = 4.5
 		untracked double MinimalResidualRB4 = 10.0
