--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -23,8 +23,9 @@ process RPCSegmentEff = {
 		untracked bool incldtMB4 = 1
 		untracked bool inclcsc = 0
 
-		untracked bool prodImages = 1
-		untracked bool calculateEfficiency = false
+		untracked bool prodImages = false
+		untracked bool calcEffi = false
+		untracked bool mydqm = true
 			
 		untracked double MinimalResidual = 4.5
 		untracked double MinimalResidualRB4 = 10.0
