Efficiency From Track

--- a/test/prodTrackRPCEfficiency.cfg
+++ b/test/prodTrackRPCEfficiency.cfg
@@ -1,13 +1,14 @@
 process RPCEff = {
 	source = PoolSource{
 	untracked vstring fileNames ={
-"/store/data/2008/5/20/T0ReReco-GlobalCruzet1-A-v1/0005/EEAB3224-DC26-DD11-AB80-001D09F2906A.root"
+	"/store/data/CRUZET1/Cosmics/RECO/CRUZET_V3_v1/0001/705DA402-AF2F-DD11-9D01-001D09F2932B.root"
 	}
 	untracked uint32 debugVebosity = 10
         untracked bool   debugFlag     = true
         }
 
-	untracked PSet maxEvents = {untracked int32 input = 100}
+
+	untracked PSet maxEvents = {untracked int32 input = -1}
 
 ##################################################################################    
 #                                                                                # 
@@ -15,7 +16,17 @@ process RPCEff = {
 #                                                                                #
 ##################################################################################    
 
-   #include "Geometry/CMSCommonData/data/cmsSimIdealGeometryXML.cfi"
+   include "CondCore/DBCommon/data/CondDBSetup.cfi"
+   include "EventFilter/RPCRawToDigi/data/RPCSQLiteCabling.cfi"
+
+   #################    Raw To Digi:   #########################
+   module rpcdigi = RPCUnpackingModule{
+    untracked InputTag InputLabel = source
+   }
+
+   # The module for 1D RPC RecHit building
+   include "RecoLocalMuon/RPCRecHit/data/rpcRecHits.cfi"
+   replace rpcRecHits.rpcDigiLabel = rpcdigi
 
    #Magnetic Field
    include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
@@ -30,9 +41,6 @@ process RPCEff = {
    include "RecoLocalMuon/Configuration/data/RecoLocalMuon.cff"
    include "CalibMuon/Configuration/data/CSC_FrontierDBConditions.cff"
    include "CalibMuon/Configuration/data/DT_FrontierConditions.cff"
-
-   #{dtlocalreco,csclocalreco}
-
 
    ## Geometry
    include "Geometry/CommonDetUnit/data/globalTrackingGeometry.cfi"
@@ -49,9 +57,6 @@ process RPCEff = {
    include "RecoMuon/CosmicMuonProducer/data/cosmicMuons.cfi"
 
    replace cosmicMuons.TrajectoryBuilderParameters.EnableRPCMeasurement = false
-   #replace cosmicMuons.TrajectoryBuilderParameters.BackwardMuonTrajectoryUpdatorParameters.MaxChi2=1.
-   #replace cosmicMuons.TrajectoryBuilderParameters.MuonTrajectoryUpdatorParameters.MaxChi2=10.
-
 
    include "DQMServices/Core/data/DQM.cfg"
 	replace DQM.collectorHost = "myhost"
@@ -65,17 +70,23 @@ process RPCEff = {
 	bool ReadEndCap = false
 	bool ReadBarrel = true
 	#Cut 
-	double EfficiencyCut = 2.
-	untracked int32 wheel = 1
+	double EfficiencyCut = 2.5
+
+	#If dtTrigger=0 --> we are reading only Dt Triggered events
+	#If dtTrigger=-10 --> we are reading all
+
+	#untracked int32 dtTrigger = 0
+
 	string PropagatorName = "SteppingHelixPropagatorAny"
 	untracked string trajectoryInput =  "cosmicMuons"
 	untracked string rpcRecHitLabel = "rpcRecHits"
-	bool AreCosmic = true
-	untracked string EffRootFileName = "file1.root"
-	untracked string GlobalRootFileName = "file2.root"
-
+	untracked string rpcDigiLabel = "rpcdigi"
+        InputTag gmtSource = gtDigis::
+	untracked string EffRootFileName = "file1"
+	untracked string GlobalRootFileName = "file2"
    }
 
-   path p1 = {cosmicMuons,rpcefftrack}
+   path p1 = {rpcdigi,rpcRecHits,cosmicMuons,rpcefftrack}
+
 }
 
