Efficiency from track extrapolation

--- a/test/prodTrackRPCEfficiency.cfg
+++ b/test/prodTrackRPCEfficiency.cfg
@@ -8,7 +8,7 @@ process RPCEff = {
         }
 
 
-	untracked PSet maxEvents = {untracked int32 input = -1}
+	untracked PSet maxEvents = {untracked int32 input = 100}
 
 ##################################################################################    
 #                                                                                # 
@@ -18,15 +18,6 @@ process RPCEff = {
 
    include "CondCore/DBCommon/data/CondDBSetup.cfi"
    include "EventFilter/RPCRawToDigi/data/RPCSQLiteCabling.cfi"
-
-   #################    Raw To Digi:   #########################
-   module rpcdigi = RPCUnpackingModule{
-    untracked InputTag InputLabel = source
-   }
-
-   # The module for 1D RPC RecHit building
-   include "RecoLocalMuon/RPCRecHit/data/rpcRecHits.cfi"
-   replace rpcRecHits.rpcDigiLabel = rpcdigi
 
    #Magnetic Field
    include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
@@ -59,7 +50,7 @@ process RPCEff = {
    replace cosmicMuons.TrajectoryBuilderParameters.EnableRPCMeasurement = false
 
    include "DQMServices/Core/data/DQM.cfg"
-	replace DQM.collectorHost = "myhost"
+	replace DQM.collectorHost = ""
 	replace DQM.collectorPort = 9090
 	replace DQM.debug = false
 
@@ -75,18 +66,18 @@ process RPCEff = {
 	#If dtTrigger=0 --> we are reading only Dt Triggered events
 	#If dtTrigger=-10 --> we are reading all
 
-	#untracked int32 dtTrigger = 0
+	untracked int32 dtTrigger = 0
 
 	string PropagatorName = "SteppingHelixPropagatorAny"
 	untracked string trajectoryInput =  "cosmicMuons"
 	untracked string rpcRecHitLabel = "rpcRecHits"
-	untracked string rpcDigiLabel = "rpcdigi"
+	untracked string rpcDigiLabel = "muonRPCDigis"
         InputTag gmtSource = gtDigis::
 	untracked string EffRootFileName = "file1"
 	untracked string GlobalRootFileName = "file2"
    }
 
-   path p1 = {rpcdigi,rpcRecHits,cosmicMuons,rpcefftrack}
+   path p1 = {cosmicMuons,rpcefftrack}
 
 }
 
