--- a/test/prodTrackRPCEfficiency.cfg
+++ b/test/prodTrackRPCEfficiency.cfg
@@ -73,8 +73,8 @@ process RPCEff = {
 	untracked string rpcRecHitLabel = "rpcRecHits"
 	untracked string rpcDigiLabel = "muonRPCDigis"
         InputTag gmtSource = gtDigis::
-	untracked string EffRootFileName = "file1"
-	untracked string GlobalRootFileName = "file2"
+	untracked string EffRootFileName = "file1.root"
+	untracked string GlobalRootFileName = "file2.root"
    }
 
    path p1 = {cosmicMuons,rpcefftrack}
