started fix for endcap

--- a/test/dqm_digi.cfg
+++ b/test/dqm_digi.cfg
@@ -7,8 +7,20 @@
 	source = PoolSource {
 	untracked vstring fileNames =   
 	 {
+ '/store/data/Commissioning08/Cosmics/RAW/CRUZET4_v1/000/058/344/0898F60C-FE6F-DD11-A8B0-000423D98F98.root',
+        '/store/data/Commissioning08/Cosmics/RAW/CRUZET4_v1/000/058/344/2C981F11-FD6F-DD11-B4BD-000423D98DB4.root',
+        '/store/data/Commissioning08/Cosmics/RAW/CRUZET4_v1/000/058/344/82FA3CF0-FC6F-DD11-9987-000423D6A6F4.root',
+        '/store/data/Commissioning08/Cosmics/RAW/CRUZET4_v1/000/058/344/905F35C5-FD6F-DD11-B757-000423D6C8EE.root',
+        '/store/data/Commissioning08/Cosmics/RAW/CRUZET4_v1/000/058/344/EC28B78D-FC6F-DD11-89DC-000423D94700.root',
+        '/store/data/Commissioning08/Cosmics/RECO/CRUZET4_v1/000/058/344/7010A19C-0170-DD11-81A4-000423D94C68.root',
+        '/store/data/Commissioning08/Cosmics/RECO/CRUZET4_v1/000/058/344/B6A43FA1-0170-DD11-B9F7-001617E30D00.root',
+        '/store/data/Commissioning08/Cosmics/RECO/CRUZET4_v1/000/058/344/DA945A02-0370-DD11-9208-001617C3B654.root',
+        '/store/data/Commissioning08/Cosmics/RECO/CRUZET4_v1/000/058/344/E661C7F8-0270-DD11-B285-001617C3B778.root',
+        '/store/data/Commissioning08/Cosmics/RECO/CRUZET4_v1/000/058/344/EE370FA7-0170-DD11-B59E-000423D6C8E6.root'
+
+
 	#'rfio:/castor/cern.ch/user/d/dlomidze/Cruzet1_Digi_043590.root'
-        'rfio:/castor/cern.ch/user/d/dlomidze/Cruzet1_43590_1_55.root'
+       # 'rfio:/castor/cern.ch/user/d/dlomidze/Cruzet1_43590_1_55.root'
 	#'file:/tmp/dlomidze/Cruzet1_43590_1_55.root'
 	#'file:/tmp/dlomidze/Cruzet1_Digi_043590.root'
        	# 'file:/afs/cern.ch/user/d/dlomidze/scratch0/digi/gren30126_1_digi_new.root'
@@ -90,5 +102,5 @@ service = LockService {untracked vstring labels = {"source"} }
      }
       #################   Path   #########################
 
-     path p = {rpcRecHits,rpcdigidqm}
+     path p = {rpcunpacker}#,rpcRecHits,rpcdigidqm}
  }
