--- a/test/seg2D2.cfg
+++ b/test/seg2D2.cfg
@@ -10,7 +10,7 @@ service = MessageLogger {}
 module demo = RPCMonitorEfficiency { 
 
 	 untracked string fileName =  "first.root"
-	 untracked string fileOut =  "second.root"
+	 untracked string fileOut =  "/tmp/carrillo/second.root"
 	 untracked bool prodimages =  false
 	 untracked bool makehtml =  false
 	 untracked bool cosmics =  false
